--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 <div id="login">
   <% if user_signed_in? -%>
       <ul>
-        <li>Hello <%= current_user.email %>!</li>
+        <li>Welcome <%= current_user.email %>!</li>
         <li><%= link_to 'Submit link', new_post_path %></li>
         <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
       </ul>
