--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,14 +6,12 @@
     <th>Url</th>
     <th></th>
     <th></th>
-    <th></th>
   </tr>
 
 <% @posts.each do |post| %>
   <tr>
     <td><%= post.title %></td>
-    <td><%= post.url %></td>
-    <td><%= link_to 'Show', post %></td>
+    <td><a href="<%= post.url %>"><%= post.url %></a></td>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
