--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Title:</b>
   <%= @post.title %>
@@ -7,12 +5,7 @@
 
 <p>
   <b>Url:</b>
-  <%= @post.url %>
-</p>
-
-<p>
-  <b>User:</b>
-  <%= @post.user %>
+  <a href="<%= @post.url %>"><%= @post.url %></a>
 </p>
 
 
